--- a/timeclock.json.example
+++ b/timeclock.json.example
@@ -1,11 +1,8 @@
 {
   "day_starts" : "8:00",
   "work_days" : 5,
+  "work_hours" : 7,
   "target_percent" : 80.0,
-  "timelog_path" : "/path/to/your/timelog",
-  "hours" : {
-    "Client1"              : 20.0,
-    "Client2"              : 20.0
-  },
+  "timelog_path" : "/path/to/your/timelog"
 }
 
