--- a/timeclock.json.example
+++ b/timeclock.json.example
@@ -4,7 +4,7 @@
   "work_hours" : 7,
   "end_time" : "17:30",
   "target_percent" : 80.0,
-  "non_billable_entries" : [ "Church", "SideProject" ],
+  "non_billable_entities" : [ "Church", "SideProject" ],
   "timelog_path" : "/path/to/your/timelog"
 }
 
